# cloud_process

3D_Ground_Segmentation/: az995708000.pcd  main.cpp
Ground_Removal/: CMakeLists.txt
Ground_Removal/include/: Gauss.h  GroundRemoval.h
Ground_Removal/src/: Gauss.cpp  GroundRemoval.cpp  main.cpp
Ground_Removal/temp/: launch.json  tasks.json
PCD_read/: pcd_read.cpp
cloud_viewer/: cloud_viewer.cpp
pcd2las/: CMakeLists.txt  pcd2las.cpp
